modified register page, removed card

--- a/src/app/components/learner-dashboard/learner-dashboard.component.html
+++ b/src/app/components/learner-dashboard/learner-dashboard.component.html
@@ -1,1 +1,91 @@
-<p>learner-dashboard works!</p>
+
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+<div class="card bg-transparent mb-4 " style="max-width: 20rem">
+    <div class="card-header">
+        <form action="" method="post">
+            <div class="preview text-center">
+                <img class="preview-img" src="./assets/course-ongoing.svg" alt="Preview Image"
+                    width="80px" height="80px" />
+            </div>
+        </form>
+    </div>
+    <div class="card-body">
+        <div class="row">
+            <div class="col-lg-4">
+                <div class="media">
+                    <a class="pull-left" href="#">
+                        <img class="media-object dp rounded-circle" src="./assets/add-user.svg"
+                            style="width: 80px;height:80px;">
+                    </a>
+                    <div class="media-body" style=" min-width: 10rem">
+                        <a href="profile-link">
+                            <h5 class="media-heading">Python Hands-on</h5>
+                        </a>
+                        <div class="progress">
+                            <div class="progress-bar bg-success" role="progressbar" aria-valuenow="40" aria-valuemin="0"
+                                aria-valuemax="100" style="width:40%">
+                                40%
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+        <div class="row" style="background: transparent;">
+            <div class="col-lg-4">
+                <div class="media">
+                    <a class="pull-left" href="#">
+                        <img class="media-object dp rounded-circle" src="./assets/add-user.svg"
+                            style="width: 80px;height:80px;">
+                    </a>
+                    <div class="media-body" style=" min-width: 10rem">
+                        <a href="profile-link">
+                            <h5 class="media-heading">Java Full Stack</h5>
+                        </a>
+                        <div class="progress">
+                            <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="40" aria-valuemin="0"
+                                aria-valuemax="100" style="width:40%">
+                                40%
+                            </div>
+                        </div>
+                        <hr style="margin:8px ">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row" style="background: transparent">
+            <div class="col-lg-4">
+                <div class="media">
+                    <a class="pull-left" href="#">
+                        <img class="media-object dp rounded-circle" src="./assets/add-user.svg"
+                            style="width: 80px;height:80px;">
+                    </a>
+                    <div class="media-body" style=" min-width: 10rem">
+                        <a href="profile-link">
+                            <h5 class="media-heading">MEAN Stack</h5>
+                        </a>
+                        <div class="progress">
+                            <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="40" aria-valuemin="0"
+                                aria-valuemax="100" style="width:40%">
+                                40%
+                            </div>
+                        </div>
+                        <hr style="margin:8px ">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+    <div class="card-footer" style="background:transparent">
+
+        <div class="form-group">
+            <input class="btn btn-success btn-block" type="submit" value="Update progress" />
+        </div>
+
+    </div>
+</div>
