--- a/src/app/extras/learner-dash-card1.component.html
+++ b/src/app/extras/learner-dash-card1.component.html
@@ -1,5 +1,4 @@
-<!--ongoing courses
-same for completed courses-->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 <div class="card bg-transparent mb-4 " style="max-width: 20rem">
     <div class="card-header">
         <form action="" method="post">
