--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-fixed">
   <div class="container">
     <a class="navbar-brand" href="#">MEAN App</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample07"
