--- a/src/app/components/trainer-register/trainer-register.component.html
+++ b/src/app/components/trainer-register/trainer-register.component.html
@@ -1,106 +1,105 @@
-<div class="container-fluid" id="singinHomepage" style="background-color: tomato;">
-    <div class="card card-primary">
-        <div class="card-header" style="background: transparent">
-            <h3>Trainer Signup</h3>
-        </div>
-        <div class="card-body" style="background: transparent">
-            <form>
+<div class="container-fluid" id="singinHomepage" style="margin-top: 1cm; border: none">
 
-                <div class="row">
-                    <div class="form-group col-md-6">
-                        <label for="trainer_fname">First name</label>
-                        <input type="text" class="form-control" id="trainer_fname" placeholder="First name" required>
-                    </div>
-                    <div class="form-group col-md-6">
-                        <label for="trainer_lname">Last name</label>
-                        <input type="text" class="form-control" id="trainer_lname" placeholder="Last name" required>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="form-group col-md-4">
-                        <label for="technologySelect2">Skills</label>
-                        <select multiple class="form-control" id="technologySelect1">
-                            <option selected disabled>Choose...</option>
-                            <option>Python</option>
-                            <option>MEAN stack</option>
-                            <option>Java Fullstack</option>
-                            <option>Dotnet Fullstack</option>
-                            <option>C#</option>
-                        </select>
-                    </div>
 
-                    <div class="form-group col-md-4">
-                        <label class="" for="experienceSelect1">Experience</label>
-                        <select class="custom-select" id="experienceSelect1" required>
-                            <option selected disabled>Choose...</option>
-                            <option value="lessThan5">Less than 5</option>
-                            <option value="5-7">Between 5 & 7</option>
-                            <option value="7-10">Between 7 & 10</option>
-                            <option value="10+">More than 10</option>
-                        </select>
-                    </div>
+    <h3>Trainer Signup</h3>
 
-                    <div class="form-group col-md-4">
-                        <label for="technologySelect2">Materials provided</label>
-                        <select multiple class="form-control" id="materialsSelect1">
-                            <option selected disabled>Choose...</option>
-                            <option>Hands on</option>
-                            <option>Pdf & Slides</option>
-                            <option>Video lectures</option>
-                            <option>Lecture notes</option>
-                            <option>Cloud Labs</option>
-                        </select>
-                    </div>
 
-                </div>
+    <form>
 
-                <div class="row">
-                    <div class="form-group col-md-6">
-                        <label for="trainer_contact">Contact Number</label>
-                        <input type="tel" class="form-control" id="trainer_contact" placeholder="Enter 10 digits only"
-                            required>
-
-                    </div>
-                    <div class="form-group col-md-6">
-                        <label for="trainer_linkedin">Linked In address</label>
-                        <input type="email" class="form-control" id="trainer_linkedin"
-                            placeholder="username@linkedin.com" required>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="form-group col-md-4">
-                        <label for="trainer_email">Email address</label>
-                        <input type="email" class="form-control" id="trainer_email" placeholder="name@example.com"
-                            required>
-                    </div>
-                    <div class="form-group col-md-4">
-                        <label for="trainer_pwd">Password</label>
-                        <input type="password" class="form-control" id="trainer_pwd" placeholder="password" required>
-                        <small id="passwordHelpBlock" class="form-text text-muted">
-                            Your password must be 8-20 characters long, must contain letters, numbers and special
-                            characters
-                        </small>
-                    </div>
-                    <div class="form-group col-md-4">
-                        <label for="trainer_conf_pwd">Re-type password</label>
-                        <input type="password" class="form-control" id="trainer_conf_pwd" placeholder="Re-type password"
-                            required>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="aboutMeTextarea1">About me</label>
-                    <textarea class="form-control" id="aboutMeTextarea1" rows="1" placeholder="optional"></textarea>
-                </div>
-            </form>
-        </div>
-        <div class="card-footer">
-            <div class="form-group">
-                <input type="checkbox" required>
-                <small>Agree to our <a href="#">Terms and Conditions</a></small>
+        <div class="row">
+            <div class="form-group col-md-6">
+                <label for="trainer_fname">First name</label>
+                <input type="text" class="form-control" id="trainer_fname" placeholder="First name" required>
             </div>
-            <button class="btn btn-primary" type="submit" style="margin-top: 5px">Submit</button>
+            <div class="form-group col-md-6">
+                <label for="trainer_lname">Last name</label>
+                <input type="text" class="form-control" id="trainer_lname" placeholder="Last name" required>
+            </div>
+        </div>
+        <div class="row">
+            <div class="form-group col-md-4">
+                <label for="technologySelect2">Skills</label>
+                <select multiple class="form-control" id="technologySelect1">
+                    <option selected disabled>Choose...</option>
+                    <option>Python</option>
+                    <option>MEAN stack</option>
+                    <option>Java Fullstack</option>
+                    <option>Dotnet Fullstack</option>
+                    <option>C#</option>
+                </select>
+            </div>
+
+            <div class="form-group col-md-4">
+                <label class="" for="experienceSelect1">Experience</label>
+                <select class="custom-select" id="experienceSelect1" required>
+                    <option selected disabled>Choose...</option>
+                    <option value="lessThan5">Less than 5</option>
+                    <option value="5-7">Between 5 & 7</option>
+                    <option value="7-10">Between 7 & 10</option>
+                    <option value="10+">More than 10</option>
+                </select>
+            </div>
+
+            <div class="form-group col-md-4">
+                <label for="technologySelect2">Materials provided</label>
+                <select multiple class="form-control" id="materialsSelect1">
+                    <option selected disabled>Choose...</option>
+                    <option>Hands on</option>
+                    <option>Pdf & Slides</option>
+                    <option>Video lectures</option>
+                    <option>Lecture notes</option>
+                    <option>Cloud Labs</option>
+                </select>
+            </div>
+
         </div>
 
+        <div class="row">
+            <div class="form-group col-md-6">
+                <label for="trainer_contact">Contact Number</label>
+                <input type="tel" class="form-control" id="trainer_contact" placeholder="Enter 10 digits only" required>
+
+            </div>
+            <div class="form-group col-md-6">
+                <label for="trainer_linkedin">Linked In address</label>
+                <input type="email" class="form-control" id="trainer_linkedin" placeholder="username@linkedin.com"
+                    required>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="form-group col-md-4">
+                <label for="trainer_email">Email address</label>
+                <input type="email" class="form-control" id="trainer_email" placeholder="name@example.com" required>
+            </div>
+            <div class="form-group col-md-4">
+                <label for="trainer_pwd">Password</label>
+                <input type="password" class="form-control" id="trainer_pwd" placeholder="password" required>
+                <small id="passwordHelpBlock" class="form-text text-muted">
+                    Your password must be 8-20 characters long, must contain letters, numbers and special
+                    characters
+                </small>
+            </div>
+            <div class="form-group col-md-4">
+                <label for="trainer_conf_pwd">Re-type password</label>
+                <input type="password" class="form-control" id="trainer_conf_pwd" placeholder="Re-type password"
+                    required>
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="aboutMeTextarea1">About me</label>
+            <textarea class="form-control" id="aboutMeTextarea1" rows="1" placeholder="optional"></textarea>
+        </div>
+    
+
+
+    <div class="form-group">
+        <input type="checkbox" required>
+        <small>Agree to our <a href="#">Terms and Conditions</a></small>
     </div>
+    <button class="btn btn-primary" type="submit" style="margin-top: 5px; color: white; background-color: black;">
+        Submit</button>
+
+</form>
+
 </div>
