--- a/src/app/components/trainer-dashboard/trainer-dashboard.component.html
+++ b/src/app/components/trainer-dashboard/trainer-dashboard.component.html
@@ -1,1 +1,152 @@
-<p>trainer-dashboard works!</p>
+<div class="wrapper d-flex">
+    <div class="sideMenu bg-mattBlackLight">
+      <div class="sidebar">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a href="#" class="nav-link px-2">
+              
+              <span class="text">Dashboard</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link px-2">
+                <span class="text">User Profile</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link px-2">
+              <span class="text">Charts</span></a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link px-2">
+              
+              <span class="text">Settings</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link px-2">
+              
+              <span class="text">Pages</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link px-2">
+             
+              <span class="text">Demo</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link px-2 sideMenuToggler">
+              
+              <span class="text">Resize</span>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="content">
+      
+      <main>
+        <div class="container-fluid">
+          <div class="alert alert-success my-5">
+           <strong class="d-flex justify-content-center text-center"> A like is always appreciated</strong>
+          </div>
+          <div class="row">
+            <div class="col-md-4 my-3">
+              <div class="bg-mattBlackLight px-3 py-3">
+                <h4 class="mb-2">New Clients</h4>
+                <div class="progress" style="height: 16px;">
+                  <div
+                    class="progress-bar bg-warning text-mattBlackDark"
+                    role="progressbar"
+                    style="width: 25%;"
+                    aria-valuenow="25"
+                    aria-valuemin="0"
+                    aria-valuemax="100"
+                  >
+                    25
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4 my-3">
+              <div class="bg-mattBlackLight px-3 py-3">
+                <h4 class="mb-2">New Projects</h4>
+                <div class="progress" style="height: 16px;">
+                  <div
+                    class="progress-bar bg-info text-mattBlackDark"
+                    role="progressbar"
+                    style="width: 50%;"
+                    aria-valuenow="25"
+                    aria-valuemin="0"
+                    aria-valuemax="100"
+                  >
+                    50
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4 my-3">
+              <div class="bg-mattBlackLight p-3">
+                <h4 class="mb-2">Completed</h4>
+                <div class="progress" style="height: 16px;">
+                  <div
+                    class="progress-bar bg-success"
+                    role="progressbar"
+                    style="width: 80%;"
+                    aria-valuenow="25"
+                    aria-valuemin="0"
+                    aria-valuemax="100"
+                  >
+                    80
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-6">
+              <div class="bg-mattBlackLight my-2 p-3">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Ratione libero totam rerum eos nam ab perspiciatis voluptatum
+                in. Quidem natus autem quae. Velit accusamus sit, perspiciatis
+                sunt earum tempora veniam.
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="bg-mattBlackLight my-2 p-3">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Ratione libero totam rerum eos nam ab perspiciatis voluptatum
+                in. Quidem natus autem quae. Velit accusamus sit, perspiciatis
+                sunt earum tempora veniam.
+              </div>
+            </div>
+          </div>
+        </div>
+      </main>
+    </div>
+  </div>
+
+  <div class="card-deck">
+    <div class="card bg-primary">
+      <div class="card-body text-center">
+        <p class="card-text">first card</p>
+      </div>
+    </div>
+    <div class="card bg-warning">
+      <div class="card-body text-center">
+        <p class="card-text">second card</p>
+      </div>
+    </div>
+    <div class="card bg-success">
+      <div class="card-body text-center">
+        <p class="card-text">third card</p>
+      </div>
+    </div>
+    <div class="card bg-danger">
+      <div class="card-body text-center">
+        <p class="card-text">fourth card</p>
+      </div>
+    </div>
+  </div>
+
