--- a/src/app/components/learner-register/learner-register.component.html
+++ b/src/app/components/learner-register/learner-register.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
     <h3>Learner Signup</h3>
-    <form #f="ngForm" (ngSubmit)="onLearnerRegisterSubmit(f)"><!--change to f.value-->
+    <form #f="ngForm" (ngSubmit)="onLearnerRegisterSubmit(f.value)" class="form form-register"><!--change to f.value-->
         <div class="row">
             <div class="form-group col-md-6">
                 <label for="learner_fname">First name</label>
