--- a/src/app/components/reg-popup/reg-popup.component.html
+++ b/src/app/components/reg-popup/reg-popup.component.html
@@ -1,5 +1,5 @@
 
-<div class="modal-fade col-md-5 overlay" role="dialog" style="border: 0px">
+<div class="modal-fade" role="dialog">
     <div class="modal-header text-center">
         <h4 class="modal-title w-100 font-weight-bold">Sign up</h4>
         <button type="button" class="close" [routerLink]="['/']" aria-label="Close">
