--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,11 +1,9 @@
-<div class="jumbotron text-center mt-5">
+<div class="jumbotron text-center mt-5" style="color: black">
     <h1>You may find what you Seek!</h1>
     <p class="lead">Don't want to signup! Cool...do a quick search for our courses.</p>
 
-    <div class="input-group">
-        <input type="text" class="form-control" placeholder="Search">
-        <div class="input-group-append">
-            <button class="btn btn-success" type="submit">Go</button>
-        </div>
-    </div>
+    <input type="text" class="form-control justify-content-center" placeholder="Search">
+
+    <button class="btn" type="submit">Search</button>
 </div>
+
