modal box UI done

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,5 @@
-<div class="jumbotron text-center mt-5" style="color: black">
+<div class="jumbotron text-center"
+    style="color: white; background: url(https://www.publicdomainpictures.net/pictures/210000/nahled/turquoise-wood-texture-wallpaper.jpg);width: auto;">
     <h1>You may find what you Seek!</h1>
     <p class="lead">Don't want to signup! Cool...do a quick search for our courses.</p>
 
@@ -6,4 +7,3 @@
 
     <button class="btn" type="submit">Search</button>
 </div>
-
