--- a/src/app/components/learner-register/learner-register.component.scss
+++ b/src/app/components/learner-register/learner-register.component.scss
@@ -1,11 +1,11 @@
 label{
-    color: white;
+    color: rgb(0, 0, 0);
 }
 
 h3{
-    color: white;
+    color: rgb(0, 0, 0);
 }
 
 small{
-    color: white;
+    color: rgb(0, 0, 0);
 }
