--- a/src/app/components/trainer-register/trainer-register.component.scss
+++ b/src/app/components/trainer-register/trainer-register.component.scss
@@ -1,11 +1,11 @@
 label{
-    color: white;
+    color: black;
 }
 
 h3{
-    color: white;
+    color: black;
 }
 
 small{
-    color: white;
+    color: black;
 }
