--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,9 +1,9 @@
 <div class="jumbotron text-center"
-    style="color: white; background: url(https://www.publicdomainpictures.net/pictures/210000/nahled/turquoise-wood-texture-wallpaper.jpg);width: auto;">
+    style="color: white; background-image: url('./assets/jumb-bg.jpg');width: cover;">
     <h1>You may find what you Seek!</h1>
     <p class="lead">Don't want to signup! Cool...do a quick search for our courses.</p>
-
-    <input type="text" class="form-control justify-content-center" placeholder="Search">
+    <input type="text" class="form-control"
+     placeholder="Search" style="width:60%; margin-left: auto; margin-right: auto;">
 
     <button class="btn" type="submit">Search</button>
 </div>
