--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,18 +1,36 @@
 .jumbotron{
-    background: transparent;
-    height: 100vh;
+    height: 80vh;
     background-size: cover;
+    font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
+    border:none;
+ 
 }
-
+.btn:hover{
+    box-shadow: 0 0 8px white;
+    background: white;
+}
+.btn:focus{
+    box-shadow: none;
+    
+}
 .btn{
-    background-color: darkcyan;
-    color: white;
+    border:0 0 10px;
+    border-color: #5cdb95 ;
+    color: #5CDB95;
     margin-top: 5px;
+    font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
+    
 }
 div{
     justify-content: center;
 }
+input:hover{
+    box-shadow:0 0 5px white;
+    background: white;
+}
+input[type=text]{
+    background: transparent;
+}
 input:focus{
-    box-shadow:0 0 0 3px rgba(0, 139, 139, 0.1);
-    outline:none;
+    background:white;
 }
