--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,16 +1,17 @@
 <div id="logInPopup" class="modal">
-  <form class="modal-content animate" style="width:40%">
+  <form class="modal-content animate" style="width:30%">
     <div class="imgcontainer">
       <span onclick="document.getElementById('logInPopup').style.display='none'" class="close"
         title="Close Modal">&times;</span>
-      <img src="./assets/trainer.svg" alt="Avatar" class="avatar" style="width: 30%; position: relative">
+        <h3 style="color: white; text-align: center; padding-top: 10px">Log In</h3>
+   <!--   <img src="./assets/trainer.svg" alt="Avatar" class="avatar" style="width: 30%;">
+    -->
     </div>
 
     <div class="container">
-      <label for="uname"><b>Username</b></label>
+      
       <input type="text" placeholder="Enter Username" name="uname" required>
 
-      <label for="pwd"><b>Password</b></label>
       <input type="password" placeholder="Enter Password" name="pwd" required>
 
 
@@ -19,18 +20,18 @@
       </label>
     </div>
 
-    <div class="container" style="background-color:#f1f1f1">
+    <div class="container" style="background-color:#5cdb95;border-bottom-right-radius: 10px;border-bottom-left-radius: 10px">
       <input type="button" class="btn btn-success" value="Log In"
       onclick="document.getElementById('logInPopup').style.display='none'">
       <input type="button" onclick="document.getElementById('logInPopup').style.display='none'" class="btn btn-danger"
         value="Cancel" style="margin-left: 20px">
-      <span class="pwd">Forgot password? Click <a href="#" id="pwdHelp">here</a></span>
+      <span class="pwd" style="color: #f1f1f1">Forgot password? Click <a href="#" id="pwdHelp">here</a></span>
     </div>
   </form>
 </div>
 
 <div id="regPopup" class="modal">
-  <div class="modal-content animate" style=" border:none; width:fit-content">
+  <div class="modal-content animate" style=" padding-top: 10px; border:none; width:fit-content; color:white; text-align:center">
     <div class="container-fluid">
       <h3>Sign Up</h3>
       <span onclick="document.getElementById('regPopup').style.display='none'" class="close"
@@ -38,17 +39,17 @@
     </div>
 
     <div class="container">
-      <div class="card" style="width:130px; border: none; margin: auto">
+      <div class="card" style="width:130px; border: none; margin: auto;">
         <img class="card-img-top" src="./assets/trainer1.svg" alt="Trainer image" style="width:100%;">
         <div class="card-body">
-          <input type="button" class="btn btn-info" value="Trainer" style="width:100%;"
+          <input type="button" class="btn" value="Trainer" style="width:100%; background-color:#05386B;color:#5cdb95"
             [routerLink]="['/trainer-register']" onclick="document.getElementById('regPopup').style.display='none'">
         </div>
       </div>
       <div class="card" style="width:130px; border: none; margin: auto;">
         <img class="card-img-top" src="./assets/learner.svg" alt="Learner image" style="width:100%;">
         <div class="card-body">
-          <input type="button" class="btn btn-info" value="Learner" style="width:100%;"
+          <input type="button" class="btn" value="Learner" style="width:100%; background-color:#5cdb95; color:#05386B"
             [routerLink]="['/learner-register']" onclick="document.getElementById('regPopup').style.display='none'">
         </div>
       </div>
@@ -58,21 +59,25 @@
 
 
 
-<nav class="navbar navbar-expand-lg navbar-fixed">
+<nav class="navbar navbar-expand-lg navbar-fixed bg-light">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">MEAN App</a>
     <div class="collapse navbar-collapse">
       <ul class="navbar-nav mr-auto navbar-left">
-        <li [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}"><a class="nav-link"
-            [routerLink]="['/']">Home</a></li>
+        
+            <li [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}">
+              <input type="button" class="btn btn-sm mr-3"
+              [routerLink]="['/']" value="Home">
+            </li>
+          
       </ul>
       <ul class="navbar-nav ml-auto navbar-right">
         <li>
-          <input type="button" class="btn btn-info btn-sm mr-3"
+          <input type="button" class="btn btn-sm mr-3"
             onclick="document.getElementById('logInPopup').style.display='block'" value="Log In">
         </li>
         <li>
-          <input type="button" class="btn btn-warning btn-sm"
+          <input type="button" class="btn btn-sm"
             onclick="document.getElementById('regPopup').style.display='block'" value="Register">
         </li>
 
