--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -1,28 +1,44 @@
+.btn-sm{
+  background-color: #5CDB95;
+  color: #05386B;
+  border-width: 3px;
+  border-bottom-color: #05386B;
+  font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
+}
+.btn:hover,.btn:focus{
+  box-shadow: 0 0 5px  #05386B;
+}
 a{
-    color:white;
+    color:#05386B;
+    font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
 }
 #pwdHelp{
   color: blue;
 }
 
 .navbar{
-    background-color:darkcyan;
+    background-color: #5CDB95;
   
 }
-body {font-family: Arial, Helvetica, sans-serif;}
+label{
+  padding-top:15px;
+}
+
 
 /* Full-width input fields */
 input[type=text], input[type=password] {
   width: 100%;
-  padding: 12px 20px;
+  padding: 8px 15px;
   margin: 8px 0;
   display: inline-block;
   border: 1px solid #ccc;
   box-sizing: border-box;
+  border-radius: 5px;
 }
 
 .container {
   padding: 16px;
+  color: white;
 }
 
 span.pwd {
@@ -42,13 +58,16 @@ span.pwd {
   overflow: auto; /* Enable scroll if needed */
   background-color: rgb(0,0,0); /* Fallback color */
   background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
- 
+  font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
 }
 
 /* Modal Content/Box */
 .modal-content {
   margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
    /* Could be more or less, depending on screen size */
+   background-color: #379683;
+   border-radius: 10px;
+   font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
 }
 
 /* The Close Button (x) */
@@ -95,10 +114,7 @@ span.pwd {
 }
 
 
-input[type=image] {
-  border:none;
-  width: 150px;
-}
+
 .card{
   background: transparent;
   border: none;
