--- a/src/app/components/trainer-register/trainer-register.component.html
+++ b/src/app/components/trainer-register/trainer-register.component.html
@@ -1,8 +1,7 @@
-<div class="container-fluid" id="singinHomepage" style="margin-top: 1cm; border: none">
+<div class="flex-container justify-content-center" style="margin-top: 1cm; border: none">
 
-
+<div>
     <h3>Trainer Signup</h3>
-
 
     <form>
 
@@ -45,7 +44,8 @@
                 <select multiple class="form-control" id="materialsSelect1">
                     <option selected disabled>Choose...</option>
                     <option>Hands on</option>
-                    <option>Pdf & Slides</option>
+                    <option>Pdfs</option>
+                    <option>Slides</option>
                     <option>Video lectures</option>
                     <option>Lecture notes</option>
                     <option>Cloud Labs</option>
@@ -86,20 +86,14 @@
                     required>
             </div>
         </div>
+        
         <div class="form-group">
-            <label for="aboutMeTextarea1">About me</label>
-            <textarea class="form-control" id="aboutMeTextarea1" rows="1" placeholder="optional"></textarea>
+            <input type="checkbox" required>
+            <small>Agree to our <a href="#">Terms and Conditions</a></small>
         </div>
-    
+        <button class="btn btn-primary" type="submit" style="margin-top: 5px; color: white;">
+            Submit</button>
 
-
-    <div class="form-group">
-        <input type="checkbox" required>
-        <small>Agree to our <a href="#">Terms and Conditions</a></small>
-    </div>
-    <button class="btn btn-primary" type="submit" style="margin-top: 5px; color: white; background-color: black;">
-        Submit</button>
-
-</form>
-
+    </form>
+</div>
 </div>
