--- a/src/app/components/learner-register/learner-register.component.scss
+++ b/src/app/components/learner-register/learner-register.component.scss
@@ -1,11 +1,15 @@
 label{
-    color: rgb(0, 0, 0);
+    color: white;
 }
 
 h3{
-    color: rgb(0, 0, 0);
+    color: white;
 }
 
 small{
-    color: rgb(0, 0, 0);
+    color: white;
 }
+.flex-container {
+    display: flex;
+    flex-direction: center;
+  }
