--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -35,6 +35,9 @@ input[type=text], input[type=password] {
   box-sizing: border-box;
   border-radius: 5px;
 }
+input:focus, input:hover{
+  box-shadow: 0 0 5px #5CDB95;
+}
 
 .container {
   padding: 16px;
@@ -57,15 +60,18 @@ span.pwd {
   height: 100%; 
   overflow: auto; /* Enable scroll if needed */
   background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  background-color: rgba(0,0,0,0.6); /* Black w/ opacity */
   font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
+ 
 }
 
 /* Modal Content/Box */
 .modal-content {
   margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
    /* Could be more or less, depending on screen size */
-   background-color: #379683;
+   //background-color: #379683;
+   background: transparent;
+   border: none;
    border-radius: 10px;
    font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
 }
@@ -75,7 +81,7 @@ span.pwd {
   position: absolute;
   right: 25px;
   top: 0;
-  color: #000;
+  color:white;;
   font-size: 35px;
   font-weight: bold;
 }
