--- a/src/app/components/trainer-dashboard/trainer-dashboard.component.scss
+++ b/src/app/components/trainer-dashboard/trainer-dashboard.component.scss
@@ -8,8 +8,8 @@ $margin-top: 56px;
 $colors: (
   "mattBlackLight": "#303337",
   "mattBlackDark": "#212121",
-  "mattGray": "#878d8d",
-  "mattRed": "#ec6271"
+  "mattGray": "#379683",
+  "mattRed": "#5cdb95"
 );
 @each $colorName, $colorValue in $colors {
   .bg-#{$colorName} {
