--- a/src/app/components/trainer-register/trainer-register.component.scss
+++ b/src/app/components/trainer-register/trainer-register.component.scss
@@ -1,11 +1,15 @@
 label{
-    color: black;
+    color: white;
 }
 
 h3{
-    color: black;
+    color: white;
 }
 
 small{
-    color: black;
+    color: white;
 }
+.flex-container {
+    display: flex;
+    flex-direction: center;
+  }
