bg changed, dashboard and connection pending

--- a/src/app/components/learner-dashboard/learner-dashboard.component.html
+++ b/src/app/components/learner-dashboard/learner-dashboard.component.html
@@ -1,10 +1,10 @@
 
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+
 <div class="card bg-transparent mb-4 " style="max-width: 20rem">
     <div class="card-header">
         <form action="" method="post">
             <div class="preview text-center">
-                <img class="preview-img" src="./assets/course-ongoing.svg" alt="Preview Image"
+                <img class="preview-img" src="./assets/trainer.svg" alt="Preview Image"
                     width="80px" height="80px" />
             </div>
         </form>
@@ -14,7 +14,7 @@
             <div class="col-lg-4">
                 <div class="media">
                     <a class="pull-left" href="#">
-                        <img class="media-object dp rounded-circle" src="./assets/add-user.svg"
+                        <img class="media-object dp rounded-circle" src="./assets/learner.svg"
                             style="width: 80px;height:80px;">
                     </a>
                     <div class="media-body" style=" min-width: 10rem">
@@ -38,7 +38,7 @@
             <div class="col-lg-4">
                 <div class="media">
                     <a class="pull-left" href="#">
-                        <img class="media-object dp rounded-circle" src="./assets/add-user.svg"
+                        <img class="media-object dp rounded-circle" src="./assets/learner.svg"
                             style="width: 80px;height:80px;">
                     </a>
                     <div class="media-body" style=" min-width: 10rem">
@@ -61,7 +61,7 @@
             <div class="col-lg-4">
                 <div class="media">
                     <a class="pull-left" href="#">
-                        <img class="media-object dp rounded-circle" src="./assets/add-user.svg"
+                        <img class="media-object dp rounded-circle" src="./assets/learner.svg"
                             style="width: 80px;height:80px;">
                     </a>
                     <div class="media-body" style=" min-width: 10rem">
