--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,9 +1,14 @@
-<div class="jumbotron text-center"
-    style="color: white; background-image: url('./assets/jumb-bg.jpg');width: cover;">
-    <h1>You may find what you Seek!</h1>
-    <p class="lead">Don't want to signup! Cool...do a quick search for our courses.</p>
-    <input type="text" class="form-control"
-     placeholder="Search" style="width:60%; margin-left: auto; margin-right: auto;">
+<div class="jumbotron" style="color: white;background: url('./assets/bg5.jpg');background-size: cover;">
+    <div class="row">
+        <div class="col-md-6">
+            <h1>You may find what you Seek!</h1>
+            <p class="lead">Don't want to signup! Cool...do a quick search for our courses.</p>
+        </div>
+        <div class="col-md-6"></div>
+        <div class="col-md-6">
+            <input type="text" class="form-control" placeholder="Search" style="width:80%; margin-left: 0px;">
 
-    <button class="btn" type="submit">Search</button>
+            <button class="btn" type="submit" style="width:20%;">Search</button>
+        </div>
+    </div>
 </div>
