--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,56 +1,48 @@
 .jumbotron{
     height: 80vh;
-    background-size: cover;
+   // background-color: transparentize($color: #000000, $amount: .8) ;
     font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
     border:none;
  
 }
 .btn:hover{
-    box-shadow: 0 0 8px white;
-    background: white;
+    box-shadow: 0 0 5px white;
 }
 .btn:focus{
     box-shadow: none;
+    opacity: 0.8; 
     
 }
 .btn{
 
-    border-width: 3px;
-    border-bottom-color: #5cdb95;
-
-    border:0 0 10px;
-    border-color: white ;
-
-    color: #5CDB95;
-    opacity: 0.8;
+    border:none;
+    color: #1e1e1e;
+    opacity: 0.6;
     background: white;
     margin-top: 5px;
     font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
-    
+    border-radius: 2rem;
+    font-weight: 600;
 }
-div{
-    justify-content: center;
+.d-flex{
+    justify-content: left;
 }
 input:hover,input:focus{
     box-shadow:0 0 5px white;
-    background: white !important;
-    color: #5CDB95;
-    opacity: 0.6;
+    opacity: 0.8;
 }
 
 ::placeholder{
-    color: white;
-    text-align: center;
-    font-weight: 600;
+    color: #1e1e1e;
+    text-align: center;  
 }
 
 
 input{
-
-    background: transparent;
+    font-size: 1.2rem;
+    background: white;
+    opacity: 0.6;
     border-width: 3px;
-    border-top: none;
-    border-left: none;
-    border-right: none;
-    border-bottom-color: #5cdb95;
+    border-color: white;
+    border-radius: 2rem;
 }
