--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -20,12 +20,12 @@
       </label>
     </div>
 
-    <div class="container"
-      style="background-color:#5cdb95;border-bottom-right-radius: 10px;border-bottom-left-radius: 10px">
+    <div class="container " style="border-bottom-right-radius: 10px;border-bottom-left-radius: 10px;">
       <input type="button" class="btn btn-success" value="Log In"
-        onclick="document.getElementById('logInPopup').style.display='none'">
+        onclick="document.getElementById('logInPopup').style.display='none'"
+        style="margin: auto; width: 100%; margin-bottom: 10px;">
       <input type="button" onclick="document.getElementById('logInPopup').style.display='none'" class="btn btn-danger"
-        value="Cancel" style="margin-left: 20px;">
+        value="Cancel" style="margin: auto; width: 100%">
       <span class="pwd" style="color: #f1f1f1">Forgot password? Click <a href="#" id="pwdHelp">here</a></span>
     </div>
   </form>
@@ -33,7 +33,7 @@
 
 <div id="regPopup" class="modal">
   <div class="modal-content animate"
-    style=" padding-top: 10px; border:none; width:fit-content; color:white; text-align:center">
+    style=" padding-top: 10px; border:none; width:fit-content; color:white; text-align:center;">
     <div class="container-fluid">
       <h3>Sign Up</h3>
       <span onclick="document.getElementById('regPopup').style.display='none'" class="close"
@@ -44,14 +44,16 @@
       <div class="card" style="width:130px; border: none; margin: auto;">
         <img class="card-img-top" src="./assets/trainer1.svg" alt="Trainer image" style="width:100%;">
         <div class="card-body">
-          <input type="button" class="btn" value="Trainer" style="width:100%; background-color:#05386B;color:#5cdb95"
+          <input type="button" class="btn" value="Trainer"
+            style="font-weight: 800;width:100%; background-color: white; color:#1e1e1e;"
             [routerLink]="['/trainer-register']" onclick="document.getElementById('regPopup').style.display='none'">
         </div>
       </div>
       <div class="card" style="width:130px; border: none; margin: auto;">
         <img class="card-img-top" src="./assets/learner.svg" alt="Learner image" style="width:100%;">
         <div class="card-body">
-          <input type="button" class="btn" value="Learner" style="width:100%; background-color:#5cdb95; color:#05386B"
+          <input type="button" class="btn" value="Learner"
+            style="font-weight: 800;width:100%; background-color: white; color:#1e1e1e;"
             [routerLink]="['/learner-register']" onclick="document.getElementById('regPopup').style.display='none'">
         </div>
       </div>
@@ -61,7 +63,7 @@
 
 
 
-<nav class="navbar navbar-expand-lg navbar-fixed bg-light">
+<nav class="navbar navbar-expand-lg navbar-fixed">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">MEAN App</a>
     <div class="collapse navbar-collapse">
