--- a/src/app/components/reg-popup/reg-popup.component.html
+++ b/src/app/components/reg-popup/reg-popup.component.html
@@ -1,13 +1,12 @@
+<div class="container register">
+    <div class="row">
+        <div class="col-md-3 register-left">
+            <h3>Trainer</h3>
+            <input type="submit" name="" value="Login" /><br />
+        </div>
+       
 
-<div class="modal-fade" role="dialog">
-    <div class="modal-header text-center">
-        <h4 class="modal-title w-100 font-weight-bold">Sign up</h4>
-        <button type="button" class="close" [routerLink]="['/']" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-        </button>
+
     </div>
-    <div class="modal-footer d-flex justify-content-center">
-        <button class="btn btn-primary btn-lg" [routerLink]="['/trainer-register']">Trainer Sign up</button>
-        <button class="btn btn-primary btn-lg" [routerLink]="['/learner-register']">Learner Sign up</button>
-    </div>
+
 </div>
