--- a/src/app/components/reg-popup/reg-popup.component.scss
+++ b/src/app/components/reg-popup/reg-popup.component.scss
@@ -1,3 +1,32 @@
-div{
-    justify-content: center;
+.register{
+    background: -webkit-linear-gradient(left, #1b9fc6, #1e1e1e);
+    margin-top: 3%;
+    padding: 3%;
+}
+.register-left{
+    text-align: center;
+    color: #fff;
+    margin-top: 4%;
+}
+.register-left input{
+    border: none;
+    border-radius: 1.5rem;
+    padding: 2%;
+    width: 40%;
+    background: #f8f9fa;
+    font-weight: bold;
+    color: #383d41;
+    margin-top: 30%;
+    margin-bottom: 3%;
+    cursor: pointer;
+}
+.register-right{
+    background: #f8f9fa;
+    
+}
+.register-heading{
+    text-align: center;
+    margin-top: 8%;
+    margin-bottom: -15%;
+    color: #495057;
 }
