--- a/src/app/components/trainer-register/trainer-register.component.html
+++ b/src/app/components/trainer-register/trainer-register.component.html
@@ -1,4 +1,4 @@
-<div class="flex-container justify-content-center" style="margin-top: 1cm; border: none">
+<div class="flex-container d-flex justify-content-center" style="padding-top: 1cm; border: none;">
 
 <div>
     <h3>Trainer Signup</h3>
@@ -18,13 +18,13 @@
         <div class="row">
             <div class="form-group col-md-4">
                 <label for="technologySelect2">Skills</label>
-                <select multiple class="form-control" id="technologySelect1">
+                <select multiple class="form-control" id="technologySelect1" required multiple> 
                     <option selected disabled>Choose...</option>
-                    <option>Python</option>
-                    <option>MEAN stack</option>
-                    <option>Java Fullstack</option>
-                    <option>Dotnet Fullstack</option>
-                    <option>C#</option>
+                    <option value="python">Python</option>
+                    <option value="meanS">MEAN stack</option>
+                    <option value="javaFS">Java Fullstack</option>
+                    <option value="dotnetFS">Dotnet Fullstack</option>
+                    <option value="cSharp">C#</option>
                 </select>
             </div>
 
@@ -41,7 +41,7 @@
 
             <div class="form-group col-md-4">
                 <label for="technologySelect2">Materials provided</label>
-                <select multiple class="form-control" id="materialsSelect1">
+                <select multiple class="form-control" id="materialsSelect1" required> 
                     <option selected disabled>Choose...</option>
                     <option>Hands on</option>
                     <option>Pdfs</option>
@@ -86,14 +86,19 @@
                     required>
             </div>
         </div>
-        
         <div class="form-group">
             <input type="checkbox" required>
             <small>Agree to our <a href="#">Terms and Conditions</a></small>
         </div>
         <button class="btn btn-primary" type="submit" style="margin-top: 5px; color: white;">
             Submit</button>
-
+            <script type="text/javascript">
+                $(function () {
+                    $('#technologySelect1').multiselect({
+                        includeSelectAllOption: true
+                    });
+                });
+            </script>
     </form>
 </div>
 </div>
